name:                arith
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sirikid/arith#readme
license:             BSD3
license-file:        LICENSE
author:              Ivan Sokolov
maintainer:          sirikid@openmailbox.org
copyright:           Copyright (c) Ivan Sokolov
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arith
                     , Arith.Lexer
                     , Arith.Parser
                     , Arith.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable arith-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       arith
                     , base
                     , readline
  default-language:    Haskell2010

test-suite arith-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Runner.hs
  other-modules:       Arith.LexerSpec
                     , Arith.ParserSpec
                     , Arith.InterpreterSpec
  build-depends:       arith
                     , base
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sirikid/arith
