name:                arith
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sirikid/arith#readme
license:             BSD3
license-file:        LICENSE
author:              Ivan Sokolov
maintainer:          sirikid@openmailbox.org
copyright:           Copyright (c) Ivan Sokolov
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arith
                     , Arith.Token
                     , Arith.Term
                     , Arith.Lexer
                     , Arith.Parser
                     , Arith.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

executable arith-repl
  hs-source-dirs:      repl
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       arith
                     , base
                     , readline
  default-language:    Haskell2010

test-suite arith-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Runner.hs
  other-modules:       Arith.LexerSpec
                     , Arith.TokenSpec
                     , SpecUtils
  build-depends:       arith
                     , base
                     , hspec
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sirikid/arith
